# rampr

./: .gitignore  LICENSE  README.md  environment.yml  project.toml  pyproject.toml
archive/data/raw/employment/: area-titles-csv.csv
archive/data/raw/input_output/: IOUse_Before_Redefinitions_PRO_Detail.xlsx  readme.md  use.csv
data/raw/input_output/: make.csv
rampr/: README.md  nat_io.py  pyproject.toml
rampr/bridge/: __init__.py  io_bridge.py  missing_bridge.py  path.py
rampr/data/crosswalks/qcew_to_io/: Readme.md  bea_402_sector_codes.txt  missing_sectors.csv  qcew_to_io_v1.csv
rampr/datasets/: __init__.py  core.py
rampr/io/: national.py
rampr/regionalize/: __init__.py  lq.py  mock.py  regionalize.py
rampr/scripts/: build_national_io.py
rampr/src/rampr/: __init__.py
rampr/src/rampr/datasets/: __init__.py  specs.py
rampr/src/rampr/datasets/_registry/: qcew_2024_bea409_allcounties_v1.txt
rampr/tests/: test_import.py
scripts/: build_qcew_io_crosswalk.py  mock_regionalize.py  qcew_data.py
src/rampr/bridge/: path.py
src/rampr/datasets/: core.py
src/rampr/datasets/_registry/: bea_make_use_18249105_v1.txt
src/rampr/io/: __init__.py  national.py
tests/: test_bridge_io.py  test_dataset_download.py
